added qc_preprocessing of add. unpaired reads from previous processing

--- a/nextflow/run.config
+++ b/nextflow/run.config
@@ -17,7 +17,15 @@ process {
     withName: qc_preprocess {
         executor = "slurm"
         errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
-        cpus = 4 
+        cpus = 4
+        memory = {8.GB * task.attempt}
+        time = '2h'
+        maxRetries = 3
+    }
+    withName: qc_preprocess_singles {
+        executor = "slurm"
+        errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
+        cpus = 4
         memory = {8.GB * task.attempt}
         time = '2h'
         maxRetries = 3
