added alignment-based human decontamination

--- a/nextflow/run.config
+++ b/nextflow/run.config
@@ -1,5 +1,7 @@
 params {
     publish_mode = "symlink"
+
+	human_ref = "/scratch/schudoma/cazy/hg38/GCA_000001405.28_GRCh38.p13"
 }
 
 /* section below needs to be adjusted to local cluster */
@@ -28,6 +30,22 @@ process {
         cpus = 4
         memory = {8.GB * task.attempt}
         time = '2h'
+        maxRetries = 3
+    }
+    withName: decontaminate {
+        executor = "slurm"
+        errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
+        cpus = 8
+        memory = {16.GB * task.attempt}
+        time = '8h'
+        maxRetries = 3
+    }
+    withName: decontaminate_singles {
+        executor = "slurm"
+        errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
+        cpus = 8
+        memory = {16.GB * task.attempt}
+        time = '8h'
         maxRetries = 3
     }
 }
