added main alignment + post-alignment merging

--- a/nextflow/run.config
+++ b/nextflow/run.config
@@ -2,6 +2,7 @@ params {
     publish_mode = "symlink"
 
 	human_ref = "/scratch/schudoma/cazy/hg38/GCA_000001405.28_GRCh38.p13"
+	reference = "/scratch/schudoma/ngless/data/Modules/igc.ngm/0.0/data/IGC-bwa-0.7.17.fna"
 }
 
 /* section below needs to be adjusted to local cluster */
@@ -48,4 +49,28 @@ process {
         time = '8h'
         maxRetries = 3
     }
+	withName: align {
+		executor = "slurm"
+		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
+		cpus = 8
+		memory = {16.GB * task.attempt}
+		time = '8h'
+		maxRetries = 3
+	}
+	withName: align_singles {
+		executor = "slurm"
+		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
+		cpus = 8
+		memory = {16.GB * task.attempt}
+		time = '8h'
+		maxRetries = 3
+	}
+	withName: merge_and_sort {
+		executor = "slurm"
+		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
+		cpus = 8
+		memory = {16.GB * task.attempt}
+		time = '8h'
+		maxRetries = 3
+	}
 }
