allow running with only singles

--- a/nextflow/run.config
+++ b/nextflow/run.config
@@ -33,6 +33,14 @@ process {
         time = '2h'
         maxRetries = 3
     }
+	withName: merge_singles {
+		executor = "slurm"
+		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
+		cpus = 1
+		memory = '2.GB'
+		time = '8h'
+		maxRetries = 3
+	}
     withName: decontaminate {
         executor = "slurm"
         errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
