full pipeline runs, configurable via run.config

--- a/nextflow/run.config
+++ b/nextflow/run.config
@@ -1,11 +1,35 @@
 params {
+
+	/*
+	How are the results stored in the output folder?
+	By default, the files are symlinked from the work dir, so ensure to dereference 
+	the symlinks before removing the work dir.
+	For low volume results, change to "copy" or, if the file system supports it, to "link".
+	(EMBL /scratch does not support "link")
+	*/
     publish_mode = "symlink"
 
-	human_ref = "/scratch/schudoma/cazy/hg38/GCA_000001405.28_GRCh38.p13"
-	reference = "/scratch/schudoma/ngless/data/Modules/igc.ngm/0.0/data/IGC-bwa-0.7.17.fna"
+	/*
+	Set the path to a pathseq database.
+	*/
+	pathseq_database = "/g/scb/zeller/fspringe/Database/PathSeq_Legacy"
+	// pathseq_database = "/scratch/schudoma/vknight/PathSeq_Legacy"
 
-	//pathseq_database = "/g/scb/zeller/fspringe/Database/PathSeq_Legacy"
-	pathseq_database = "/scratch/schudoma/vknight/PathSeq_Legacy"
+	/*
+	Set the path to a mOTUs database if you have a custom mOTUs installation.
+	Setting this will automatically activate usage of the -db command line parameter.
+	*/
+	//motus_database = "/g/scb/zeller/fspringe/Software/mOTUs/motus/share/motus-2.6.0/db_mOTU"
+
+	/*
+	Set the path to a kraken2 database.
+	*/
+	kraken_database = "/g/scb/zeller/jawirbel/total_RNAseq/databases/kraken2_standard"
+
+	/*
+	Set the path to a mapseq binary.
+	*/
+	mapseq_bin = "/g/scb/zeller/fspringe/Software/mapseq-1.2.6-linux/mapseq"
 	
 }
 
@@ -49,7 +73,8 @@ process {
         maxRetries = 3	
 	}
 	withName: kraken2_single {
-		module = "BLAST+/2.9.0-foss-2018b"
+		//module = "BLAST+/2.9.0-foss-2018b"
+		conda = "bioconda::kraken2"
         executor = "slurm"
         errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
         cpus = 8
@@ -58,7 +83,8 @@ process {
         maxRetries = 3	
 	}
 	withName: kraken2_paired {
-		module = "BLAST+/2.9.0-foss-2018b"
+		//module = "BLAST+/2.9.0-foss-2018b"
+		conda = "bioconda::kraken2"
         executor = "slurm"
         errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
         cpus = 8
@@ -103,8 +129,8 @@ process {
         maxRetries = 3	
 	}
 	withName: motus_single {
-		conda = "/g/scb/zeller/fspringe/Software/mOTUs/motus"
-		//conda = "bioconda::motus==2.6.0"
+		//conda = "/g/scb/zeller/fspringe/Software/mOTUs/motus"
+		conda = "bioconda::motus==2.6.0"
         executor = "slurm"
         errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}	
         cpus = 6 
@@ -113,8 +139,8 @@ process {
         maxRetries = 3	
 	}
 	withName: motus_paired {
-		conda = "/g/scb/zeller/fspringe/Software/mOTUs/motus"
-		//conda = "bioconda::motus==2.6.0"
+		//conda = "/g/scb/zeller/fspringe/Software/mOTUs/motus"
+		conda = "bioconda::motus==2.6.0"
         executor = "slurm"
         errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}	
         cpus = 6 
