--- a/nextflow/run.config
+++ b/nextflow/run.config
@@ -74,7 +74,9 @@ process {
 	}
 	withName: kraken2_single {
 		//module = "BLAST+/2.9.0-foss-2018b"
-		conda = "bioconda::kraken2"
+		//conda = "bioconda::kraken2"
+		// kraken2 needs to somehow get dependencies from conda-forge -> todo: make env.yml
+		conda = "/g/scb/bork/schudoma/miniconda3/envs/kraken2_weird"
 		executor = "slurm"
 		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
 		cpus = 8
@@ -84,7 +86,9 @@ process {
 	}
 	withName: kraken2_paired {
 		//module = "BLAST+/2.9.0-foss-2018b"
-		conda = "bioconda::kraken2"
+		//conda = "bioconda::kraken2"
+		// kraken2 needs to somehow get dependencies from conda-forge -> todo: make env.yml
+		conda = "/g/scb/bork/schudoma/miniconda3/envs/kraken2_weird"
 		executor = "slurm"
 		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
 		cpus = 8
