--- a/nextflow/run.config
+++ b/nextflow/run.config
@@ -72,7 +72,7 @@ process {
 		time = '2h'
 		maxRetries = 3	
 	}
-	withName: kraken2_single {
+	withName: kraken2 {
 		//module = "BLAST+/2.9.0-foss-2018b"
 		//conda = "bioconda::kraken2"
 		// kraken2 needs to somehow get dependencies from conda-forge -> todo: make env.yml
@@ -84,19 +84,7 @@ process {
 		time = '2h'
 		maxRetries = 3	
 	}
-	withName: kraken2_paired {
-		//module = "BLAST+/2.9.0-foss-2018b"
-		//conda = "bioconda::kraken2"
-		// kraken2 needs to somehow get dependencies from conda-forge -> todo: make env.yml
-		conda = "/g/scb/bork/schudoma/miniconda3/envs/kraken2_weird"
-		executor = "slurm"
-		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
-		cpus = 8
-		memory = {64.GB * task.attempt}
-		time = '2h'
-		maxRetries = 3	
-	}
-	withName: mtag_extraction_single {
+	withName: mtag_extraction {
 		conda = "/g/scb/zeller/fspringe/Software/mTAGs/"
 		executor = "slurm"
 		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}	
@@ -105,16 +93,7 @@ process {
 		time = '24h'
 		maxRetries = 3	
 	}
-	withName: mtag_extraction_paired {
-		conda = "/g/scb/zeller/fspringe/Software/mTAGs/"
-		executor = "slurm"
-		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}	
-		cpus = 24 
-		memory = {64.GB * task.attempt}
-		time = '24h'
-		maxRetries = 3	
-	}
-	withName: mapseq_single {
+	withName: mapseq {
 		conda = "/g/scb/zeller/fspringe/Software/mTAGs/"
 		executor = "slurm"
 		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}	
@@ -123,26 +102,7 @@ process {
 		time = '2h'
 		maxRetries = 3	
 	}
-	withName: mapseq_paired {
-		conda = "/g/scb/zeller/fspringe/Software/mTAGs/"
-		executor = "slurm"
-		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}	
-		cpus = 8 
-		memory = {8.GB * task.attempt}
-		time = '2h'
-		maxRetries = 3	
-	}
-	withName: motus_single {
-		//conda = "/g/scb/zeller/fspringe/Software/mOTUs/motus"
-		conda = "bioconda::motus==2.6.0"
-		executor = "slurm"
-		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}	
-		cpus = 6 
-		memory = {8.GB * task.attempt}
-		time = '2h'
-		maxRetries = 3	
-	}
-	withName: motus_paired {
+	withName: motus {
 		//conda = "/g/scb/zeller/fspringe/Software/mOTUs/motus"
 		conda = "bioconda::motus==2.6.0"
 		executor = "slurm"
@@ -161,15 +121,7 @@ process {
 		time = '2h'
 		maxRetries = 3	
 	}
-	withName: collate_mapseq_single {
-		executor = "slurm"
-		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
-		cpus = 1
-		memory = {2.GB * task.attempt}
-		time = '2h'
-		maxRetries = 3	
-	}
-	withName: collate_mapseq_paired {
+	withName: collate_mapseq_tables {
 		executor = "slurm"
 		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
 		cpus = 1
@@ -178,4 +130,3 @@ process {
 		maxRetries = 3	
 	}
 }
-
