pathseq:--min-clipped-read-length can now be set via parameter

--- a/nextflow/run.config
+++ b/nextflow/run.config
@@ -14,6 +14,7 @@ params {
 	*/
 	pathseq_database = "/g/scb/zeller/fspringe/Database/PathSeq_Legacy"
 	// pathseq_database = "/scratch/schudoma/vknight/PathSeq_Legacy"
+	pathseq_min_clipped_read_length = 31
 
 	/*
 	Set the path to a mOTUs database if you have a custom mOTUs installation.
