mtags update + experimental process toggles * replaced mapseq + downstream with mtags annotate + merge * adapted mtags command lines to newer mtags version * added --skip_process params

--- a/nextflow/run.config
+++ b/nextflow/run.config
@@ -2,7 +2,7 @@ params {
 
 	/*
 	How are the results stored in the output folder?
-	By default, the files are symlinked from the work dir, so ensure to dereference 
+	By default, the files are symlinked from the work dir, so ensure to dereference
 	the symlinks before removing the work dir.
 	For low volume results, change to "copy" or, if the file system supports it, to "link".
 	(EMBL /scratch does not support "link")
@@ -27,11 +27,6 @@ params {
 	*/
 	kraken_database = "/g/scb/zeller/jawirbel/total_RNAseq/databases/kraken2_standard"
 
-	/*
-	Set the path to a mapseq binary.
-	*/
-	mapseq_bin = "/g/scb/zeller/fspringe/Software/mapseq-1.2.6-linux/mapseq"
-	
 }
 
 /* section below needs to be adjusted to local cluster */
@@ -53,7 +48,7 @@ process {
 		cpus = 8
 		memory = {8.GB * task.attempt}
 		time = '24h'
-		maxRetries = 3	
+		maxRetries = 3
 	}
 	withName: fq2bam {
 		module = ["GATK", "Java/1.8.0_221"]
@@ -62,7 +57,7 @@ process {
 		cpus = 2
 		memory = {8.GB * task.attempt}
 		time = '24h'
-		maxRetries = 3	
+		maxRetries = 3
 	}
 	withName: count_reads {
 		module = "SAMtools/1.10-GCC-8.3.0"
@@ -71,7 +66,7 @@ process {
 		cpus = 2
 		memory = {8.GB * task.attempt}
 		time = '24h'
-		maxRetries = 3	
+		maxRetries = 3
 	}
 	withName: kraken2 {
 		//module = "BLAST+/2.9.0-foss-2018b"
@@ -83,35 +78,44 @@ process {
 		cpus = 8
 		memory = {64.GB * task.attempt}
 		time = '24h'
-		maxRetries = 3	
+		maxRetries = 3
 	}
-	withName: mtag_extraction {
-		conda = "/g/scb/zeller/fspringe/Software/mTAGs/"
+	withName: mtags_extract {
+		conda = "/g/scb/zeller/fspringe/Software/env/mtags/"
 		executor = "slurm"
-		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}	
-		cpus = 24 
+		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
+		cpus = 24
 		memory = {64.GB * task.attempt}
 		time = '24h'
-		maxRetries = 3	
+		maxRetries = 3
 	}
-	withName: mapseq {
-		conda = "/g/scb/zeller/fspringe/Software/mTAGs/"
+	withName: mtags_annotate {
+		conda = "/g/scb/zeller/fspringe/Software/env/mtags/"
 		executor = "slurm"
-		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}	
-		cpus = 8 
-		memory = {8.GB * task.attempt}
+		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
+		cpus = 24
+		memory = {64.GB * task.attempt}
 		time = '24h'
-		maxRetries = 3	
+		maxRetries = 3
+	}
+	withName: mtags_merge {
+		conda = "/g/scb/zeller/fspringe/Software/env/mtags/"
+		executor = "slurm"
+		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
+		cpus = 1
+		memory = {2.GB * task.attempt}
+		time = '24h'
+		maxRetries = 3
 	}
 	withName: motus {
 		//conda = "/g/scb/zeller/fspringe/Software/mOTUs/motus"
 		conda = "bioconda::motus==2.6.0"
 		executor = "slurm"
-		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}	
-		cpus = 6 
+		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
+		cpus = 6
 		memory = {8.GB * task.attempt}
 		time = '24h'
-		maxRetries = 3	
+		maxRetries = 3
 	}
 	withName: pathseq {
 		module = ["GATK", "Java/1.8.0_221"]
@@ -120,14 +124,6 @@ process {
 		cpus = 1
 		memory = {256.GB * task.attempt}
 		time = '24h'
-		maxRetries = 3	
-	}
-	withName: collate_mapseq_tables {
-		executor = "slurm"
-		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
-		cpus = 1
-		memory = {2.GB * task.attempt}
-		time = '24h'
-		maxRetries = 3	
+		maxRetries = 3
 	}
 }
