added run_ parameters (which are kinda useless) + some renaming

--- a/nextflow/run.config
+++ b/nextflow/run.config
@@ -107,7 +107,7 @@ process {
 		time = '24h'
 		maxRetries = 3
 	}
-	withName: motus {
+	withName: motus2 {
 		//conda = "/g/scb/zeller/fspringe/Software/mOTUs/motus"
 		conda = "bioconda::motus==2.6.0"
 		executor = "slurm"
