--- a/nextflow/run.config
+++ b/nextflow/run.config
@@ -27,6 +27,9 @@ params {
 	*/
 	kraken_database = "/g/scb/zeller/jawirbel/total_RNAseq/databases/kraken2_standard"
 
+
+	collate_script = "/scratch/schudoma/vknight/scripts/ExtractProfiledCounts_210823.R"
+
 }
 
 /* section below needs to be adjusted to local cluster */
@@ -41,6 +44,10 @@ executor {
 }
 
 process {
+	withName: collate_data {
+		conda = "/g/scb/bork/schudoma/miniconda3/envs/vknight_analysis"
+		executor = "local"
+	}
 	withName: bam2fq {
 		module = "SAMtools/1.10-GCC-8.3.0"
 		executor = "slurm"
@@ -120,10 +127,10 @@ process {
 	withName: pathseq {
 		module = ["GATK", "Java/1.8.0_221"]
 		executor = "slurm"
-		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
+		errorStrategy = {task.attempt <= 8 ? "retry" : "ignore"}
 		cpus = 1
-		memory = {256.GB * task.attempt}
+		memory = {32.GB * task.attempt}
 		time = '24h'
-		maxRetries = 3
+		maxRetries = 8
 	}
 }
