--- a/nextflow/run.config
+++ b/nextflow/run.config
@@ -53,7 +53,7 @@ process {
 		executor = "slurm"
 		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
 		cpus = 8
-		memory = {8.GB * task.attempt}
+		memory = {bam.size() < 10.G ? 8.GB * task.attempt : 16.GB * task.attempt}
 		time = '24h'
 		maxRetries = 3
 	}
@@ -115,8 +115,8 @@ process {
 		maxRetries = 3
 	}
 	withName: motus2 {
-		//conda = "/g/scb/zeller/fspringe/Software/mOTUs/motus"
-		conda = "bioconda::motus==2.6.0"
+		conda = "/g/scb/zeller/fspringe/Software/mOTUs/motus"
+		// conda = "bioconda::motus==2.6.0"
 		executor = "slurm"
 		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
 		cpus = 6
@@ -129,7 +129,7 @@ process {
 		executor = "slurm"
 		errorStrategy = {task.attempt <= 8 ? "retry" : "ignore"}
 		cpus = 1
-		memory = {32.GB * task.attempt}
+		memory = {bam.size() < 10.GB ? 64.GB * task.attempt : 128.GB * task.attempt}
 		time = '24h'
 		maxRetries = 8
 	}
