fixed typoe & extended mtags_extract time reqs

--- a/nextflow/run.config
+++ b/nextflow/run.config
@@ -53,7 +53,7 @@ process {
 		executor = "slurm"
 		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
 		cpus = 8
-		memory = {bam.size() < 10.G ? 8.GB * task.attempt : 16.GB * task.attempt}
+		memory = {bam.size() < 10.GB ? 8.GB * task.attempt : 16.GB * task.attempt}
 		time = '24h'
 		maxRetries = 3
 	}
@@ -93,7 +93,7 @@ process {
 		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
 		cpus = 24
 		memory = {64.GB * task.attempt}
-		time = '24h'
+		time = {reads.size() < 10.GB ? '24h' : '72h'}
 		maxRetries = 3
 	}
 	withName: mtags_annotate {
