re-added mapseq step

--- a/nextflow/run.config
+++ b/nextflow/run.config
@@ -27,7 +27,15 @@ params {
 	*/
 	kraken_database = "/g/scb/zeller/jawirbel/total_RNAseq/databases/kraken2_standard"
 
+	/*
+	Set the path to a mapseq binary.
+	*/
+	mapseq_bin = "/g/scb/zeller/fspringe/Software/mapseq-1.2.6-linux/mapseq"
 
+
+	/*
+	Set the path to the collate script
+	*/
 	collate_script = "/scratch/schudoma/vknight/scripts/ExtractProfiledCounts_210823.R"
 
 }
@@ -53,7 +61,8 @@ process {
 		executor = "slurm"
 		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
 		cpus = 8
-		memory = {bam.size() < 10.GB ? 8.GB * task.attempt : 16.GB * task.attempt}
+		//memory = {bam.size() < 10.GB ? 8.GB * task.attempt : 16.GB * task.attempt}
+		memory = {bam.size() < 10.GB ? 8.GB * task.attempt : (bam.size() < 30.GB ? 16.GB * task.attempt : 32.GB * task.attempt)}
 		time = '24h'
 		maxRetries = 3
 	}
@@ -71,7 +80,8 @@ process {
 		executor = "slurm"
 		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
 		cpus = 2
-		memory = {8.GB * task.attempt}
+		//memory = {8.GB * task.attempt}
+		memory = {bam.size() < 10.GB ? 8.GB * task.attempt : (bam.size() < 30.GB ? 16.GB * task.attempt : 32.GB * task.attempt)}
 		time = '24h'
 		maxRetries = 3
 	}
@@ -132,5 +142,22 @@ process {
 		memory = {bam.size() < 10.GB ? 64.GB * task.attempt : 128.GB * task.attempt}
 		time = '24h'
 		maxRetries = 8
+	}
+	withName: collate_mapseq_tables {
+		executor = "slurm"
+		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
+		cpus = 1
+		memory = {2.GB * task.attempt}
+		time = '24h'
+		maxRetries = 3	
+	}
+	withName: mapseq {
+		conda = "/g/scb/zeller/fspringe/Software/mTAGs/"
+		executor = "slurm"
+		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}	
+		cpus = 8 
+		memory = {8.GB * task.attempt}
+		time = '24h'
+		maxRetries = 3	
 	}
 }
