adjusted resource requirements for larger wxs datasets

--- a/nextflow/run.config
+++ b/nextflow/run.config
@@ -63,7 +63,7 @@ process {
 		cpus = 8
 		//memory = {bam.size() < 10.GB ? 8.GB * task.attempt : 16.GB * task.attempt}
 		memory = {bam.size() < 10.GB ? 8.GB * task.attempt : (bam.size() < 30.GB ? 16.GB * task.attempt : 32.GB * task.attempt)}
-		time = '24h'
+		time = '7d'
 		maxRetries = 3
 	}
 	withName: fq2bam {
@@ -72,7 +72,7 @@ process {
 		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
 		cpus = 2
 		memory = {8.GB * task.attempt}
-		time = '24h'
+		time = '7d'
 		maxRetries = 3
 	}
 	withName: count_reads {
@@ -81,8 +81,9 @@ process {
 		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
 		cpus = 2
 		//memory = {8.GB * task.attempt}
-		memory = {bam.size() < 10.GB ? 8.GB * task.attempt : (bam.size() < 30.GB ? 16.GB * task.attempt : 32.GB * task.attempt)}
-		time = '24h'
+		//memory = {bam.size() < 10.GB ? 8.GB * task.attempt : (bam.size() < 30.GB ? 16.GB * task.attempt : 32.GB * task.attempt)}
+		memory = {2.GB * task.attempt} 
+		time = '7d'
 		maxRetries = 3
 	}
 	withName: kraken2 {
@@ -94,7 +95,7 @@ process {
 		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
 		cpus = 8
 		memory = {64.GB * task.attempt}
-		time = '24h'
+		time = '7d'
 		maxRetries = 3
 	}
 	withName: mtags_extract {
@@ -102,8 +103,9 @@ process {
 		executor = "slurm"
 		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
 		cpus = 24
-		memory = {64.GB * task.attempt}
-		time = {reads.size() < 10.GB ? '24h' : '72h'}
+		//memory = {64.GB * task.attempt}
+		memory = {4.GB * task.attempt}
+		time = {reads.size() < 10.GB ? '24h' : '7d'}
 		maxRetries = 3
 	}
 	withName: mtags_annotate {
@@ -111,8 +113,8 @@ process {
 		executor = "slurm"
 		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
 		cpus = 24
-		memory = {64.GB * task.attempt}
-		time = '24h'
+		memory = {2.GB * task.attempt}
+		time = '7d'
 		maxRetries = 3
 	}
 	withName: mtags_merge {
@@ -131,7 +133,7 @@ process {
 		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
 		cpus = 6
 		memory = {8.GB * task.attempt}
-		time = '24h'
+		time = '7d'
 		maxRetries = 3
 	}
 	withName: pathseq {
@@ -139,8 +141,8 @@ process {
 		executor = "slurm"
 		errorStrategy = {task.attempt <= 8 ? "retry" : "ignore"}
 		cpus = 1
-		memory = {bam.size() < 10.GB ? 64.GB * task.attempt : 128.GB * task.attempt}
-		time = '24h'
+		memory = {256.GB * task.attempt}
+		time = '7d'
 		maxRetries = 8
 	}
 	withName: collate_mapseq_tables {
@@ -157,7 +159,7 @@ process {
 		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}	
 		cpus = 8 
 		memory = {8.GB * task.attempt}
-		time = '24h'
+		time = '7d'
 		maxRetries = 3	
 	}
 }
