--- a/nexflow.config
+++ b/nexflow.config
@@ -2,8 +2,7 @@ manifest {
 	author = "Fabian Springer, Jakob Wirbel, Christian Schudoma"
 	defaultBranch = "main"
 	description = "Ensembl taxonomic microbiome profiling"
-	mainScript = "nextflow/vknight.nf"
 	name = "vortex_knight"
-	nextflowVersion = "20.10"
+	nextflowVersion = ">=20.10"
 	version = "0.2"
 }
