--- a/nextflow/run.config
+++ b/nextflow/run.config
@@ -21,6 +21,8 @@ params {
 	Setting this will automatically activate usage of the -db command line parameter.
 	*/
 	//motus_database = "/g/scb/zeller/fspringe/Software/mOTUs/motus/share/motus-2.6.0/db_mOTU"
+	motus2_min_length = 30 // -l
+	motus2_n_marker_genes = 3 // -g
 
 	/*
 	Set the path to a kraken2 database.
