added in nevermore preprocessing

--- a/nextflow/run.config
+++ b/nextflow/run.config
@@ -38,7 +38,18 @@ params {
 	/*
 	Set the path to the collate script
 	*/
-	collate_script = "/scratch/schudoma/vknight/scripts/ExtractProfiledCounts_210823.R"
+	//collate_script = "/scratch/schudoma/vknight/scripts/ExtractProfiledCounts_210823.R"
+	collate_script = null
+
+	env_path = "/g/scb/bork/schudoma/miniconda3/envs"
+
+
+	decon_ref = "/scratch/schudoma/vknight/decon/ref"
+	decon_minid = 0.97
+
+
+	adapters = "/g/scb/bork/schudoma/miniconda3/envs/bbtools/opt/bbmap-38.18/resources/adapters.fa"
+	multiqc_config = "/scratch/schudoma/vknight/multiqc.config"
 
 }
 
@@ -55,11 +66,44 @@ executor {
 
 process {
 	withName: collate_data {
-		conda = "/g/scb/bork/schudoma/miniconda3/envs/vknight_analysis"
+		conda = params.env_path + "/vknight_analysis"
+		//conda = "/g/scb/bork/schudoma/miniconda3/envs/vknight_analysis"
 		executor = "local"
 	}
+	withName: count_reads {
+		executor = "local"
+	}
+	withName: fastqc {
+		conda = "/g/scb/bork/schudoma/miniconda3/envs/fastqc"
+		executor = "slurm"
+        errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
+		cpus = 2
+		memory = {4.GB * task.attempt}
+		time = '7d'
+		maxRetries = 3
+	}
+	withName: multiqc {
+		conda = "/g/scb/bork/schudoma/miniconda3/envs/fastqc"
+		executor = "slurm"
+        errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
+		cpus = 1
+		memory = {4.GB * task.attempt}
+		time = '7d'
+		maxRetries = 3
+	}
+	withName: dehumanise {
+		conda = "bioconda::bbmap bioconda::samtools"
+		executor = "slurm"
+        errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
+		cpus = 8
+		memory = {20.GB * task.attempt}
+		time = '7d'
+		maxRetries = 3
+	}
 	withName: bam2fq {
-		module = "SAMtools/1.10-GCC-8.3.0"
+		// module = "SAMtools/1.10-GCC-8.3.0"
+		module = ""
+		conda = "/g/scb/bork/schudoma/miniconda3/envs/bwa"
 		executor = "slurm"
 		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
 		cpus = 8
@@ -77,7 +121,7 @@ process {
 		time = '7d'
 		maxRetries = 3
 	}
-	withName: count_reads {
+	withName: flagstats {
 		module = "SAMtools/1.10-GCC-8.3.0"
 		executor = "slurm"
 		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
@@ -85,6 +129,18 @@ process {
 		//memory = {8.GB * task.attempt}
 		//memory = {bam.size() < 10.GB ? 8.GB * task.attempt : (bam.size() < 30.GB ? 16.GB * task.attempt : 32.GB * task.attempt)}
 		memory = {2.GB * task.attempt} 
+		time = '7d'
+		maxRetries = 3
+	}
+	withName: dehumanise_kraken2 {
+		//module = "BLAST+/2.9.0-foss-2018b"
+		//conda = "bioconda::kraken2"
+		// kraken2 needs to somehow get dependencies from conda-forge -> todo: make env.yml
+		conda = "/g/scb/bork/schudoma/miniconda3/envs/kraken2_weird"
+		executor = "slurm"
+		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
+		cpus = 8
+		memory = {64.GB * task.attempt}
 		time = '7d'
 		maxRetries = 3
 	}
@@ -164,4 +220,30 @@ process {
 		time = '7d'
 		maxRetries = 3	
 	}
+    withName: qc_preprocess {
+        conda = "bioconda::bbmap"
+        executor = "slurm"
+        errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
+        cpus = 4
+        memory = {8.GB * task.attempt}
+        time = '2h'
+        maxRetries = 3
+    }
+    withName: qc_bbmerge {
+        conda = "bioconda::bbmap"
+        executor = "slurm"
+        errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
+        cpus = 4
+        memory = {16.GB * task.attempt}
+        time = '2h'
+        maxRetries = 3
+    }
+    withName: concat_singles {
+        executor = "slurm"
+        errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
+        cpus = 1
+        memory = '2.GB'
+        time = '8h'
+        maxRetries = 3
+    }
 }
