re-added bam-based read counting and added fastqc parsing for raw counts

--- a/nextflow/run.config
+++ b/nextflow/run.config
@@ -132,7 +132,7 @@ process {
 		time = '7d'
 		maxRetries = 3
 	}
-	withName: dehumanise_kraken2 {
+	withName: remove_host_kraken2 {
 		//module = "BLAST+/2.9.0-foss-2018b"
 		//conda = "bioconda::kraken2"
 		// kraken2 needs to somehow get dependencies from conda-forge -> todo: make env.yml
