added more parameters to bbduk preprocessing

--- a/nextflow/run.config
+++ b/nextflow/run.config
@@ -43,14 +43,25 @@ params {
 
 	env_path = "/g/scb/bork/schudoma/miniconda3/envs"
 
+	remove_host_kraken2_db = "/g/scb/zeller/schudoma/kraken2/hg38_silva_genome"
 
-	decon_ref = "/scratch/schudoma/vknight/decon/ref"
-	decon_minid = 0.97
+	adapters = "/scratch/schudoma/vknight/adapters.fa"
 
-
-	adapters = "/g/scb/bork/schudoma/miniconda3/envs/bbtools/opt/bbmap-38.18/resources/adapters.fa"
 	multiqc_config = "/scratch/schudoma/vknight/multiqc.config"
 
+	/* 
+		bbduk qc parameters 
+		s. https://jgi.doe.gov/data-and-tools/bbtools/bb-tools-user-guide/bbduk-guide/
+		qtrim=rl trimq=3 : gentle quality trimming (only discard bases < phred 3; phred 2 = junk marker) on either side (rl) of the read
+		maq=25 : discard reads below average quality of pred 25
+		minlen=45 : discard reads < 45bp
+		ref=?? ktrim=r k=23 mink=11 hdist=1 tpe tbo : right-side k-mer based adapter clipping with 1 mismatch allowed, try overlap-detection (tbo), and trim pairs to same length (tpe) upon adapter detection
+		ftm=5 : get rid off (n*5)+1st base (last sequencing cycle illumina garbage)
+		entropy=0.5 entropywindow=50 entropyk=5 : discard low complexity sequences
+	*/
+
+	qc_params = "qtrim=rl trimq=3 maq=25 minlen=45 ref=${params.adapters} ktrim=r k=23 mink=11 hdist=1 ftm=5 entropy=0.5 entropywindow=50 entropyk=5 tpe tbo"
+	
 }
 
 /* section below needs to be adjusted to local cluster */
