--- a/nextflow/run.config
+++ b/nextflow/run.config
@@ -86,6 +86,7 @@ process {
 	}
 	withName: fastqc {
 		conda = "/g/scb/bork/schudoma/miniconda3/envs/fastqc"
+		//conda = "bioconda::fastqc bioconda::multiqc"
 		executor = "slurm"
         errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
 		cpus = 2
@@ -95,19 +96,11 @@ process {
 	}
 	withName: multiqc {
 		conda = "/g/scb/bork/schudoma/miniconda3/envs/fastqc"
+		//conda = "bioconda::fastqc bioconda::multiqc"
 		executor = "slurm"
         errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
 		cpus = 1
 		memory = {4.GB * task.attempt}
-		time = '7d'
-		maxRetries = 3
-	}
-	withName: dehumanise {
-		conda = "bioconda::bbmap bioconda::samtools"
-		executor = "slurm"
-        errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
-		cpus = 8
-		memory = {20.GB * task.attempt}
 		time = '7d'
 		maxRetries = 3
 	}
