removed qc_preprocess from config

--- a/config/run.config
+++ b/config/run.config
@@ -76,6 +76,7 @@ executor {
 }
 
 process {
+	cache = "lenient"
 	withName: collate_data {
 		conda = params.env_path + "/vknight_analysis"
 		//conda = "/g/scb/bork/schudoma/miniconda3/envs/vknight_analysis"
@@ -224,7 +225,7 @@ process {
 		time = '7d'
 		maxRetries = 3	
 	}
-    withName: qc_preprocess {
+    withName: qc_bbduk {
         conda = "bioconda::bbmap"
         executor = "slurm"
         errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
