assets/configs are now addressed via projectDir

--- a/config/run.config
+++ b/config/run.config
@@ -45,10 +45,6 @@ params {
 
 	remove_host_kraken2_db = "/g/scb/zeller/schudoma/kraken2/hg38_silva_genome"
 
-	adapters = "/scratch/schudoma/vknight/adapters.fa"
-
-	multiqc_config = "/scratch/schudoma/vknight/multiqc.config"
-
 	/* 
 		bbduk qc parameters 
 		s. https://jgi.doe.gov/data-and-tools/bbtools/bb-tools-user-guide/bbduk-guide/
@@ -60,7 +56,7 @@ params {
 		entropy=0.5 entropywindow=50 entropyk=5 : discard low complexity sequences
 	*/
 
-	qc_params = "qtrim=rl trimq=3 maq=25 minlen=45 ref=${params.adapters} ktrim=r k=23 mink=11 hdist=1 ftm=5 entropy=0.5 entropywindow=50 entropyk=5 tpe tbo"
+	qc_params = "qtrim=rl trimq=3 maq=25 minlen=45 ref=${projectDir}/assets/adapters.fa ktrim=r k=23 mink=11 hdist=1 ftm=5 entropy=0.5 entropywindow=50 entropyk=5 tpe tbo"
 	
 }
 
