--- a/nextflow.config
+++ b/nextflow.config
@@ -3,6 +3,6 @@ manifest {
 	defaultBranch = "main"
 	description = "Ensembl taxonomic microbiome profiling"
 	name = "vortex_knight"
-	nextflowVersion = "20.10"
+	nextflowVersion = ">=20.10"
 	version = "0.3"
 }
