--- a/config/run.config
+++ b/config/run.config
@@ -20,19 +20,19 @@ params {
 	Set the path to a mOTUs database if you have a custom mOTUs installation.
 	Setting this will automatically activate usage of the -db command line parameter.
 	*/
-	//motus_database = "/g/scb/zeller/fspringe/Software/mOTUs/motus/share/motus-2.6.0/db_mOTU"
+	motus_database = "/g/scb/zeller/fspringe/Software/mOTUs/motus/share/motus-2.6.0/db_mOTU"
 	motus2_min_length = 30 // -l
 	motus2_n_marker_genes = 1 // -g
 
 	/*
-	Set the path to a kraken2 database.
+	Set the path to a kraken2 database for kraken2-profiling
 	*/
 	kraken_database = "/g/scb/zeller/jawirbel/total_RNAseq/databases/kraken2_standard"
 
 	/*
 	Set the path to a mapseq binary.
 	*/
-	mapseq_bin = "/g/scb/zeller/fspringe/Software/mapseq-1.2.6-linux/mapseq"
+	mapseq_bin = "mapseq" // /g/scb/zeller/fspringe/Software/mapseq-1.2.6-linux/mapseq"
 
 
 	/*
@@ -41,8 +41,9 @@ params {
 	//collate_script = "/scratch/schudoma/vknight/scripts/ExtractProfiledCounts_210823.R"
 	collate_script = null
 
-	env_path = "/g/scb/bork/schudoma/miniconda3/envs"
-
+	/*
+	Set the path to a kraken2 database for host-removal
+	*/
 	remove_host_kraken2_db = "/g/scb/zeller/schudoma/kraken2/hg38_silva_genome"
 
 	/* 
@@ -56,7 +57,7 @@ params {
 		entropy=0.5 entropywindow=50 entropyk=5 : discard low complexity sequences
 	*/
 
-	qc_params = "qtrim=rl trimq=3 maq=25 minlen=45 ref=${projectDir}/assets/adapters.fa ktrim=r k=23 mink=11 hdist=1 ftm=5 entropy=0.5 entropywindow=50 entropyk=5 tpe tbo"
+	qc_params = "qtrim=rl trimq=3 maq=25 minlen=45 ktrim=r k=23 mink=11 hdist=1 ftm=5 entropy=0.5 entropywindow=50 entropyk=5 tpe tbo"
 	
 }
 
@@ -74,7 +75,7 @@ executor {
 process {
 	cache = "lenient"
 	withName: collate_data {
-		conda = params.env_path + "/vknight_analysis"
+		//conda = params.env_path + "/vknight_analysis"
 		//conda = "/g/scb/bork/schudoma/miniconda3/envs/vknight_analysis"
 		executor = "local"
 	}
@@ -82,8 +83,7 @@ process {
 		executor = "local"
 	}
 	withName: fastqc {
-		conda = "/g/scb/bork/schudoma/miniconda3/envs/fastqc"
-		//conda = "bioconda::fastqc bioconda::multiqc"
+		container = "oras://ghcr.io/cschu/vortex_knight:latest"
 		executor = "slurm"
         errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
 		cpus = 2
@@ -92,8 +92,7 @@ process {
 		maxRetries = 3
 	}
 	withName: multiqc {
-		conda = "/g/scb/bork/schudoma/miniconda3/envs/fastqc"
-		//conda = "bioconda::fastqc bioconda::multiqc"
+		container = "oras://ghcr.io/cschu/vortex_knight:latest"
 		executor = "slurm"
         errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
 		cpus = 1
@@ -102,9 +101,7 @@ process {
 		maxRetries = 3
 	}
 	withName: bam2fq {
-		// module = "SAMtools/1.10-GCC-8.3.0"
-		module = ""
-		conda = "/g/scb/bork/schudoma/miniconda3/envs/bwa"
+		container = "oras://ghcr.io/cschu/vortex_knight:latest"
 		executor = "slurm"
 		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
 		cpus = 8
@@ -114,7 +111,7 @@ process {
 		maxRetries = 3
 	}
 	withName: fq2bam {
-		module = ["GATK", "Java/1.8.0_221"]
+		container = "oras://ghcr.io/cschu/vortex_knight:latest"
 		executor = "slurm"
 		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
 		cpus = 2
@@ -123,7 +120,7 @@ process {
 		maxRetries = 3
 	}
 	withName: flagstats {
-		module = "SAMtools/1.10-GCC-8.3.0"
+		container = "oras://ghcr.io/cschu/vortex_knight:latest"
 		executor = "slurm"
 		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
 		cpus = 2
@@ -134,10 +131,7 @@ process {
 		maxRetries = 3
 	}
 	withName: remove_host_kraken2 {
-		//module = "BLAST+/2.9.0-foss-2018b"
-		//conda = "bioconda::kraken2"
-		// kraken2 needs to somehow get dependencies from conda-forge -> todo: make env.yml
-		conda = "/g/scb/bork/schudoma/miniconda3/envs/kraken2_weird"
+		container = "oras://ghcr.io/cschu/vortex_knight:latest"
 		executor = "slurm"
 		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
 		cpus = 8
@@ -146,10 +140,7 @@ process {
 		maxRetries = 3
 	}
 	withName: kraken2 {
-		//module = "BLAST+/2.9.0-foss-2018b"
-		//conda = "bioconda::kraken2"
-		// kraken2 needs to somehow get dependencies from conda-forge -> todo: make env.yml
-		conda = "/g/scb/bork/schudoma/miniconda3/envs/kraken2_weird"
+		container = "oras://ghcr.io/cschu/vortex_knight:latest"
 		executor = "slurm"
 		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
 		cpus = 8
@@ -158,7 +149,7 @@ process {
 		maxRetries = 3
 	}
 	withName: mtags_extract {
-		conda = "/g/scb/zeller/fspringe/Software/env/mtags/"
+		container = "oras://ghcr.io/cschu/vortex_knight:latest"
 		executor = "slurm"
 		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
 		cpus = 24
@@ -168,7 +159,7 @@ process {
 		maxRetries = 3
 	}
 	withName: mtags_annotate {
-		conda = "/g/scb/zeller/fspringe/Software/env/mtags/"
+		container = "oras://ghcr.io/cschu/vortex_knight:latest"
 		executor = "slurm"
 		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
 		cpus = 24
@@ -177,7 +168,7 @@ process {
 		maxRetries = 3
 	}
 	withName: mtags_merge {
-		conda = "/g/scb/zeller/fspringe/Software/env/mtags/"
+		container = "oras://ghcr.io/cschu/vortex_knight:latest"
 		executor = "slurm"
 		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
 		cpus = 1
@@ -186,8 +177,7 @@ process {
 		maxRetries = 3
 	}
 	withName: motus2 {
-		conda = "/g/scb/zeller/fspringe/Software/mOTUs/motus"
-		// conda = "bioconda::motus==2.6.0"
+		container = "oras://ghcr.io/cschu/vortex_knight:latest"
 		executor = "slurm"
 		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
 		cpus = 6
@@ -196,7 +186,7 @@ process {
 		maxRetries = 3
 	}
 	withName: pathseq {
-		module = ["GATK", "Java/1.8.0_221"]
+		container = "oras://ghcr.io/cschu/vortex_knight:latest"
 		executor = "slurm"
 		errorStrategy = {task.attempt <= 8 ? "retry" : "ignore"}
 		cpus = 1
@@ -213,7 +203,7 @@ process {
 		maxRetries = 3	
 	}
 	withName: mapseq {
-		conda = "/g/scb/zeller/fspringe/Software/mTAGs/"
+		container = "oras://ghcr.io/cschu/vortex_knight:latest"
 		executor = "slurm"
 		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}	
 		cpus = 8 
@@ -222,7 +212,7 @@ process {
 		maxRetries = 3	
 	}
     withName: qc_bbduk {
-        conda = "bioconda::bbmap"
+		container = "oras://ghcr.io/cschu/vortex_knight:latest"
         executor = "slurm"
         errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
         cpus = 4
@@ -231,7 +221,7 @@ process {
         maxRetries = 3
     }
     withName: qc_bbmerge {
-        conda = "bioconda::bbmap"
+		container = "oras://ghcr.io/cschu/vortex_knight:latest"
         executor = "slurm"
         errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
         cpus = 4
@@ -247,4 +237,9 @@ process {
         time = '8h'
         maxRetries = 3
     }
+}
+
+singularity {
+	enabled = true
+	autoMounts = true
 }
