fixed parameter handling

--- a/config/run.config
+++ b/config/run.config
@@ -1,5 +1,7 @@
 params {
 
+	output_dir = "vknight_out"
+
 	/*
 	How are the results stored in the output folder?
 	By default, the files are symlinked from the work dir, so ensure to dereference
@@ -28,6 +30,7 @@ params {
 	Set the path to a kraken2 database for kraken2-profiling
 	*/
 	kraken_database = "/g/scb/zeller/jawirbel/total_RNAseq/databases/kraken2_standard"
+    kraken2_min_hit_groups = 10
 
 	/*
 	Set the path to a mapseq binary.
