updated run.config from target branch

--- a/config/run.config
+++ b/config/run.config
@@ -1,5 +1,7 @@
 params {
 
+	output_dir = "vknight_out"
+
 	/*
 	How are the results stored in the output folder?
 	By default, the files are symlinked from the work dir, so ensure to dereference
@@ -20,26 +22,46 @@ params {
 	Set the path to a mOTUs database if you have a custom mOTUs installation.
 	Setting this will automatically activate usage of the -db command line parameter.
 	*/
-	//motus_database = "/g/scb/zeller/fspringe/Software/mOTUs/motus/share/motus-2.6.0/db_mOTU"
+	motus_database = "/g/scb/zeller/fspringe/Software/mOTUs/motus/share/motus-2.6.0/db_mOTU"
 	motus2_min_length = 30 // -l
 	motus2_n_marker_genes = 1 // -g
 
 	/*
-	Set the path to a kraken2 database.
+	Set the path to a kraken2 database for kraken2-profiling
 	*/
 	kraken_database = "/g/scb/zeller/jawirbel/total_RNAseq/databases/kraken2_standard"
+    kraken2_min_hit_groups = 10
 
 	/*
 	Set the path to a mapseq binary.
 	*/
-	mapseq_bin = "/g/scb/zeller/fspringe/Software/mapseq-1.2.6-linux/mapseq"
+	mapseq_bin = "mapseq" // /g/scb/zeller/fspringe/Software/mapseq-1.2.6-linux/mapseq"
 
 
 	/*
 	Set the path to the collate script
 	*/
-	collate_script = "/scratch/schudoma/vknight/scripts/ExtractProfiledCounts_210823.R"
+	//collate_script = "/scratch/schudoma/vknight/scripts/ExtractProfiledCounts_210823.R"
+	collate_script = null
 
+	/*
+	Set the path to a kraken2 database for host-removal
+	*/
+	remove_host_kraken2_db = "/g/scb/zeller/schudoma/kraken2/hg38_silva_genome"
+
+	/* 
+		bbduk qc parameters 
+		s. https://jgi.doe.gov/data-and-tools/bbtools/bb-tools-user-guide/bbduk-guide/
+		qtrim=rl trimq=3 : gentle quality trimming (only discard bases < phred 3; phred 2 = junk marker) on either side (rl) of the read
+		maq=25 : discard reads below average quality of pred 25
+		minlen=45 : discard reads < 45bp
+		ref=?? ktrim=r k=23 mink=11 hdist=1 tpe tbo : right-side k-mer based adapter clipping with 1 mismatch allowed, try overlap-detection (tbo), and trim pairs to same length (tpe) upon adapter detection
+		ftm=5 : get rid off (n*5)+1st base (last sequencing cycle illumina garbage)
+		entropy=0.5 entropywindow=50 entropyk=5 : discard low complexity sequences
+	*/
+
+	qc_params = "qtrim=rl trimq=3 maq=25 minlen=45 ktrim=r k=23 mink=11 hdist=1 ftm=5 entropy=0.5 entropywindow=50 entropyk=5 tpe tbo"
+	
 }
 
 /* section below needs to be adjusted to local cluster */
@@ -54,12 +76,35 @@ executor {
 }
 
 process {
+	cache = "lenient"
 	withName: collate_data {
-		conda = "/g/scb/bork/schudoma/miniconda3/envs/vknight_analysis"
+		//conda = params.env_path + "/vknight_analysis"
+		//conda = "/g/scb/bork/schudoma/miniconda3/envs/vknight_analysis"
 		executor = "local"
 	}
+	withName: count_reads {
+		executor = "local"
+	}
+	withName: fastqc {
+		container = "oras://ghcr.io/cschu/vortex_knight:latest"
+		executor = "slurm"
+        errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
+		cpus = 2
+		memory = {4.GB * task.attempt}
+		time = '7d'
+		maxRetries = 3
+	}
+	withName: multiqc {
+		container = "oras://ghcr.io/cschu/vortex_knight:latest"
+		executor = "slurm"
+        errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
+		cpus = 1
+		memory = {4.GB * task.attempt}
+		time = '7d'
+		maxRetries = 3
+	}
 	withName: bam2fq {
-		module = "SAMtools/1.10-GCC-8.3.0"
+		container = "oras://ghcr.io/cschu/vortex_knight:latest"
 		executor = "slurm"
 		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
 		cpus = 8
@@ -69,7 +114,7 @@ process {
 		maxRetries = 3
 	}
 	withName: fq2bam {
-		module = ["GATK", "Java/1.8.0_221"]
+		container = "oras://ghcr.io/cschu/vortex_knight:latest"
 		executor = "slurm"
 		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
 		cpus = 2
@@ -77,22 +122,28 @@ process {
 		time = '7d'
 		maxRetries = 3
 	}
-	withName: count_reads {
-		module = "SAMtools/1.10-GCC-8.3.0"
+	withName: flagstats {
+		container = "oras://ghcr.io/cschu/vortex_knight:latest"
 		executor = "slurm"
 		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
 		cpus = 2
 		//memory = {8.GB * task.attempt}
 		//memory = {bam.size() < 10.GB ? 8.GB * task.attempt : (bam.size() < 30.GB ? 16.GB * task.attempt : 32.GB * task.attempt)}
-		memory = {2.GB * task.attempt}
+		memory = {2.GB * task.attempt} 
+		time = '7d'
+		maxRetries = 3
+	}
+	withName: remove_host_kraken2 {
+		container = "oras://ghcr.io/cschu/vortex_knight:latest"
+		executor = "slurm"
+		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
+		cpus = 8
+		memory = {64.GB * task.attempt}
 		time = '7d'
 		maxRetries = 3
 	}
 	withName: kraken2 {
-		//module = "BLAST+/2.9.0-foss-2018b"
-		//conda = "bioconda::kraken2"
-		// kraken2 needs to somehow get dependencies from conda-forge -> todo: make env.yml
-		conda = "/g/scb/bork/schudoma/miniconda3/envs/kraken2_weird"
+		container = "oras://ghcr.io/cschu/vortex_knight:latest"
 		executor = "slurm"
 		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
 		cpus = 8
@@ -101,7 +152,7 @@ process {
 		maxRetries = 3
 	}
 	withName: mtags_extract {
-		conda = "/g/scb/zeller/fspringe/Software/env/mtags/"
+		container = "oras://ghcr.io/cschu/vortex_knight:latest"
 		executor = "slurm"
 		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
 		cpus = 24
@@ -111,7 +162,7 @@ process {
 		maxRetries = 3
 	}
 	withName: mtags_annotate {
-		conda = "/g/scb/zeller/fspringe/Software/env/mtags/"
+		container = "oras://ghcr.io/cschu/vortex_knight:latest"
 		executor = "slurm"
 		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
 		cpus = 24
@@ -120,7 +171,7 @@ process {
 		maxRetries = 3
 	}
 	withName: mtags_merge {
-		conda = "/g/scb/zeller/fspringe/Software/env/mtags/"
+		container = "oras://ghcr.io/cschu/vortex_knight:latest"
 		executor = "slurm"
 		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
 		cpus = 1
@@ -129,8 +180,7 @@ process {
 		maxRetries = 3
 	}
 	withName: motus2 {
-		conda = "/g/scb/zeller/fspringe/Software/mOTUs/motus"
-		// conda = "bioconda::motus==2.6.0"
+		container = "oras://ghcr.io/cschu/vortex_knight:latest"
 		executor = "slurm"
 		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
 		cpus = 6
@@ -139,7 +189,7 @@ process {
 		maxRetries = 3
 	}
 	withName: pathseq {
-		module = ["GATK", "Java/1.8.0_221"]
+		container = "oras://ghcr.io/cschu/vortex_knight:latest"
 		executor = "slurm"
 		errorStrategy = {task.attempt <= 8 ? "retry" : "ignore"}
 		cpus = 1
@@ -156,12 +206,43 @@ process {
 		maxRetries = 3	
 	}
 	withName: mapseq {
-		conda = "/g/scb/zeller/fspringe/Software/mTAGs/"
+		container = "oras://ghcr.io/cschu/vortex_knight:latest"
 		executor = "slurm"
 		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}	
-		cpus = 8
+		cpus = 8 
 		memory = {8.GB * task.attempt}
 		time = '7d'
 		maxRetries = 3	
 	}
+    withName: qc_bbduk {
+		container = "oras://ghcr.io/cschu/vortex_knight:latest"
+        executor = "slurm"
+        errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
+        cpus = 4
+        memory = {8.GB * task.attempt}
+        time = '2h'
+        maxRetries = 3
+    }
+    withName: qc_bbmerge {
+		container = "oras://ghcr.io/cschu/vortex_knight:latest"
+        executor = "slurm"
+        errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
+        cpus = 4
+        memory = {16.GB * task.attempt}
+        time = '2h'
+        maxRetries = 3
+    }
+    withName: concat_singles {
+        executor = "slurm"
+        errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
+        cpus = 1
+        memory = '2.GB'
+        time = '8h'
+        maxRetries = 3
+    }
+}
+
+singularity {
+	enabled = true
+	autoMounts = true
 }
