Refactor/streamline wf structure 20210910 (#2)
* Update README.md

Co-authored-by: Christian Schudoma <christian.schudoma@embl.de>

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,7 +1,7 @@
 manifest {
 	author = "Fabian Springer, Jakob Wirbel, Christian Schudoma"
 	defaultBranch = "main"
-	description = "Ensembl taxonomic microbiome profiling"
+	description = "Ensemble taxonomic microbiome profiling"
 	name = "vortex_knight"
 	nextflowVersion = ">=20.10"
 	version = "0.3"
