added amplicon mode for mapseq-based 16S analysis

--- a/config/run.config
+++ b/config/run.config
@@ -60,7 +60,25 @@ params {
 		entropy=0.5 entropywindow=50 entropyk=5 : discard low complexity sequences
 	*/
 
-	qc_params = "qtrim=rl trimq=3 maq=25 minlen=45 ktrim=r k=23 mink=11 hdist=1 ftm=5 entropy=0.5 entropywindow=50 entropyk=5 tpe tbo"
+	qc_params_shotgun = "qtrim=rl trimq=3 maq=25 ktrim=r k=23 mink=11 hdist=1 ftm=5 entropy=0.5 entropywindow=50 entropyk=5 tpe tbo"
+	qc_params_amplicon_primers = "qtrim=rl trimq=3 ktrim=l k=14 mink=1 hdist=1 cu=t"
+	qc_params_amplicon = "qtrim=rl trimq=3 ktrim=l k=23 mink=1 hdist=1 tpe tbo cu=t"
+	qc_minlen = 45
+
+
+
+ if (params.amplicon_seq) {
+        if (params.primers) {
+            qc_params = params.qc_params_amplicon_primers
+            trim_params = "literal=${params.primers} minlen=${params.qc_minlen}"
+        } else {
+            qc_params = params.qc_params_amplicon
+            trim_params = "ref=${adapters} minlen=${params.qc_minlen}"
+        }
+    } else {
+        qc_params = params.qc_params_shotgun
+        trim_params = "ref=${adapters} minlen=${params.qc_minlen}"
+    }
 	
 }
 
@@ -198,6 +216,7 @@ process {
 		maxRetries = 8
 	}
 	withName: collate_mapseq_tables {
+		container = "oras://ghcr.io/cschu/vortex_knight:latest"
 		executor = "slurm"
 		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
 		cpus = 1
