--- a/config/run.config
+++ b/config/run.config
@@ -63,23 +63,29 @@ params {
 	qc_params_shotgun = "qtrim=rl trimq=3 maq=25 ktrim=r k=23 mink=11 hdist=1 ftm=5 entropy=0.5 entropywindow=50 entropyk=5 tpe tbo"
 	qc_params_amplicon_primers = "qtrim=rl trimq=3 ktrim=l k=14 mink=1 hdist=1 cu=t"
 	qc_params_amplicon = "qtrim=rl trimq=3 ktrim=l k=23 mink=1 hdist=1 tpe tbo cu=t"
-	qc_minlen = 45
+	//qc_minlen = 45
 
+	// only keep reads of at least length = qc_minlen
+    qc_minlen = 100
 
+    // If only primer lengths are supplied, figaro/dada2 will take care of primer removal.
+    // Otherwise, if primer sequences are supplied,
+    // primer + adapter removal is a two-step process:
+    // 1. gentle quality trimming (< phred 3) + remove left primer on 5'-R1 and potentially on 3'-R2 (rc)
+    // 2. remove right primer on 5'-R2 and potentially on 3'-R1 (rc)
 
- if (params.amplicon_seq) {
-        if (params.primers) {
-            qc_params = params.qc_params_amplicon_primers
-            trim_params = "literal=${params.primers} minlen=${params.qc_minlen}"
-        } else {
-            qc_params = params.qc_params_amplicon
-            trim_params = "ref=${adapters} minlen=${params.qc_minlen}"
-        }
-    } else {
-        qc_params = params.qc_params_shotgun
-        trim_params = "ref=${adapters} minlen=${params.qc_minlen}"
-    }
-	
+    // Primer removal is highly dataset-specific, you might have to play with the settings below:
+    // also refer to: https://jgi.doe.gov/data-and-tools/bbtools/bb-tools-user-guide/bbduk-guide/
+    // cu=t : allow degenerate primer sequences
+    // qtrim=rl trimq=3 : gentle quality trimming (< phred 3) on both sides
+    // ktrim=(r|l) : clip adapters from right xor left end -- DO NOT MODIFY.
+    // restrictleft|restrictright : only take into account the first / last N bases for adapter clipping
+    // k=9 hdist=1: adapter/primer k-mers of length 9 have to match with at most one mismatch
+    // mink=1: at the ends of reads, perfect (mismatch=0) adapter/primer k-mer matches of length 1 are allowed (similar to cutadapt)
+	// -- to allow mismatches, set hdist2 to a positive, non-zero integer
+
+    p5_primer_params = "cu=t qtrim=rl ktrim=l trimq=3 k=9 mink=1 hdist=1 restrictleft=50"
+    p3_primer_params = "cu=t ktrim=r k=9 mink=1 hdist=1 restrictright=50"
 }
 
 /* section below needs to be adjusted to local cluster */
@@ -233,7 +239,7 @@ process {
 		time = '7d'
 		maxRetries = 3	
 	}
-    withName: qc_bbduk {
+    withLabel: bbduk {
 		container = "oras://ghcr.io/cschu/vortex_knight:latest"
         executor = "slurm"
         errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
