--- a/config/run.config
+++ b/config/run.config
@@ -149,7 +149,7 @@ process {
         errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
         cpus = 8
         memory = {16.GB * task.attempt}
-        time = '8h'
+        time = '7d'
         maxRetries = 3
     }
     withLabel: samtools {
