added read_counter process

--- a/config/run.config
+++ b/config/run.config
@@ -23,8 +23,12 @@ params {
 	Setting this will automatically activate usage of the -db command line parameter.
 	*/
 	motus_database = "/g/scb/zeller/fspringe/Software/mOTUs/motus/share/motus-2.6.0/db_mOTU"
+	motus2_database = "/g/scb/zeller/fspringe/Software/mOTUs/motus/share/motus-2.6.0/db_mOTU"
 	motus2_min_length = 30 // -l
 	motus2_n_marker_genes = 1 // -g
+
+	read_counter_database = "/g/scb/zeller/fspringe/Database/GTDB/all_genes.faa"
+	read_counter_min_length = 75
 
 	/*
 	Set the path to a kraken2 database for kraken2-profiling
@@ -240,6 +244,16 @@ process {
         time = '8h'
         maxRetries = 3
     }
+    withName: read_counter {
+		// container = "oras://ghcr.io/cschu/vortex_knight:latest"
+        executor = "slurm"
+        errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
+        cpus = 4
+        memory = {64.GB * task.attempt}
+        time = '8h'
+        maxRetries = 3
+    }
+
 }
 
 singularity {
