--- a/config/run.config
+++ b/config/run.config
@@ -245,7 +245,7 @@ process {
         maxRetries = 3
     }
     withName: read_counter {
-		// container = "oras://ghcr.io/cschu/vortex_knight:latest"
+		container = "oras://ghcr.io/cschu/vortex_knight:latest"
         executor = "slurm"
         errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
         cpus = 4
