added missing container entry to collate_mapseq_tables

--- a/config/run.config
+++ b/config/run.config
@@ -202,6 +202,7 @@ process {
 		maxRetries = 8
 	}
 	withName: collate_mapseq_tables {
+		container = "oras://ghcr.io/cschu/vortex_knight:latest"
 		executor = "slurm"
 		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
 		cpus = 1
