mapseq changes - mapseq can now be run with a custom database (--mapseq_db) - mseq files are now published

--- a/config/run.config
+++ b/config/run.config
@@ -41,6 +41,13 @@ params {
 	*/
 	mapseq_bin = "mapseq" // /g/scb/zeller/fspringe/Software/mapseq-1.2.6-linux/mapseq"
 
+	/*
+	Set the path to a mapseq database
+	ATT: The path must be a directory containing exactly 1 .fna and 1 .tax file
+	(other files not ending in .tax/.fna are fine)
+	*/
+	mapseq_db = "/g/scb/zeller/schudoma/mapseq_db/ssu_r89"
+
 
 	/*
 	Set the path to the collate script
@@ -210,7 +217,7 @@ process {
 		time = '24h'
 		maxRetries = 3	
 	}
-	withName: mapseq {
+	withLabel: mapseq {
 		container = "oras://ghcr.io/cschu/vortex_knight:latest"
 		executor = "slurm"
 		errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}	
