--- a/.github/workflows/singularity.yml
+++ b/.github/workflows/singularity.yml
@@ -7,6 +7,7 @@ on:
       - main
       - master
       - develop
+      - dev
 
   # Do the builds on all pull requests (to test them)
   pull_request: []
