added read_counter -y parameter

--- a/config/run.config
+++ b/config/run.config
@@ -29,6 +29,7 @@ params {
 
 	read_counter_database = "/g/scb/zeller/fspringe/Database/GTDB/all_genes.faa"
 	read_counter_min_length = 75
+	read_counter_count_mode = "-y insert.raw_counts"  // "-y insert.scaled_counts" is default
 
 	/*
 	Set the path to a kraken2 database for kraken2-profiling
